--- a/portfolio.html
+++ b/portfolio.html
@@ -15,13 +15,40 @@ body_title: What I Do
 body_description: |
   Building Dynamic, Responsive &amp; Clean Web and Mobile Applications
 ---
-
 <div class="container-fluid">
+  <div class="row">
+    <div class="col-md-8">
+      <div class="col-md-10 col-md-offset-1">
+        <img src="{{ "/img/angular2training.png" |  prepend: site.baseurl }}" title="Angular 2 Training" class="thumbnail col-md-12 col-xs-12" />
+      </div>
+    </div>
+    <div class="container-fluid app col-md-4">
+      <div class="row logo" style="color: black; font-size: 35px;">
+        Angular 2 Training
+      </div>
+      <div class="row">
+        <p>
+          Teaching Angular 2 through Callibrity Solutions.
+        </p>
+        <p>
+          Responsiblities were the Creating of Angular 2 class material. This includes Instructional
+          Material and Class Labs.
+        </p>
+        <p>
+          If you are interested in learning Angular 2 and get some working examples to show off. Please
+          contact <a href="http://callibrity.com" >Callibrity Solutions</a>.
+        </p>
+        <p>
+          <a href="mailto:contactus@callibrity.com" class="btn btn-info">Contact</a>
+        </p>
+      </div>
+    </div>
+  </div>
   <div class="row">
     <div class="col-md-8">
       <img src="{{ "/img/shuluit-monitor.png" |  prepend: site.baseurl }}" title="ShuluIt" class="col-md-12 col-xs-12" />
     </div>
-    <div class="container-fluid app col-md-4">
+    <div class="container-fluid app col-md-4" style="margin-top: 40px;">
       <div class="row logo">
         Shulu<b>It</b>
       </div>
