--- a/resume.html
+++ b/resume.html
@@ -84,9 +84,13 @@ permalink: /resume/
           </p>
           <h3>Projects:</h3>
           <ul>
-            <li>Crossroads Church - Creating a custom web application using AngularJS and .NET Web API that
+            <li>Crossroads Church - Creating a custom web application using AngularJS and .NET Web API. The application
               integrates with off the shelf products ranging from Ministry Platform to a check scanning tool
               called EZ scan.
+            </li>
+            <li>Angular 2 Traing - Creating instructional and lab material to teach a 2-3 day Angular 2 course.
+              Teaching the Angular 2 course.
+            </li>
           </ul>
         </article>
 
